--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compileOnly 'org.jetbrains:annotations:17.0.0'
 
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.javacord:javacord:3.0.+'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.14'
 }
 
