--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ repositories.jcenter()
 
 dependencies {
     implementation 'de.kaleidox:kalutils:0.4.1'
-    compileOnly 'org.javacord:javacord:3.0.+'
+    implementation 'org.javacord:javacord:3.0.+'
     compileOnly 'org.jetbrains:annotations:17.0.0'
 
     testImplementation 'junit:junit:4.12'
