--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,11 @@
       <version>0.4.1</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.javacord</groupId>
+      <artifactId>javacord</artifactId>
+      <version>3.0.+</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
