--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,11 @@
       <version>3.0.+</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.3</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
