--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ apply from: 'gradle/vars.gradle'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-task wrapper(type: Wrapper) {
-  gradleVersion = '4.10.2'
+wrapper {
+  gradleVersion = '5.2'
   distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
 }
 
