--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 apply plugin: 'java-library'
 
 group 'de.kaleidox'
-version '2.0.0-SNAPSHOT'
+version '0.1.0'
 
 apply from: 'gradle/vars.gradle'
 
