Changed Javacord version to 3.0.3

--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ repositories.jcenter()
 
 dependencies {
     implementation 'de.kaleidox:kalutils:0.4.1'
-    implementation 'org.javacord:javacord:3.0.+'
+    implementation 'org.javacord:javacord:3.0.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
     compileOnly 'org.jetbrains:annotations:17.0.0'
 
