--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,10 @@ repositories.jcenter()
 
 dependencies {
     implementation 'de.kaleidox:kalutils:0.4.1'
-    implementation 'org.javacord:javacord:3.0.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.3'
+    implementation('org.javacord:javacord:3.0.3') {
+        exclude group: 'com.fasterxml.jackson.core'
+    }
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     compileOnly 'org.jetbrains:annotations:17.0.0'
 
     testImplementation 'junit:junit:4.12'
