--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,17 @@
       <artifactId>javacord</artifactId>
       <version>3.0.3</version>
       <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>com.fasterxml.jackson.core</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.3</version>
+      <version>2.9.8</version>
       <scope>runtime</scope>
     </dependency>
   </dependencies>
