--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,8 @@
     </dependency>
     <dependency>
       <groupId>org.javacord</groupId>
-      <artifactId>javacord</artifactId>
-      <version>3.0.3</version>
+      <artifactId>javacord-api</artifactId>
+      <version>3.0.4</version>
       <scope>runtime</scope>
       <exclusions>
         <exclusion>
@@ -39,6 +39,24 @@
           <groupId>com.fasterxml.jackson.core</groupId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.javacord</groupId>
+      <artifactId>javacord-core</artifactId>
+      <version>3.0.4</version>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>*</artifactId>
+          <groupId>com.fasterxml.jackson.core</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.11.0</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
