--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -1,10 +1,8 @@
 apply plugin: 'maven-publish'
-//apply plugin: 'signing'
+apply plugin: 'signing'
 apply plugin: "io.codearte.nexus-staging"
 
 publishing {
-    test
-
     repositories {
         maven {
             url = snapshot
