--- a/build.gradle
+++ b/build.gradle
@@ -20,13 +20,13 @@ wrapper {
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
-    archiveClassifier.set("sources")
+    classifier = "sources"
 }
 
 task javadocJar(type: Jar) {
     //javadoc
     from javadoc.destinationDir
-    archiveClassifier.set("javadoc")
+    classifier = "javadoc"
 }
 
 javadoc {
