--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 apply plugin: 'java-library'
 
 group 'de.kaleidox'
-version '0.1.1'
+version '0.1.1-rev1'
 
 apply from: 'gradle/vars.gradle'
 
