--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -1,5 +1,3 @@
-import java.util.function.BiConsumer
-
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 apply plugin: "io.codearte.nexus-staging"
@@ -63,16 +61,11 @@ task generateGithubPom(type: GenerateMavenPom) {
     pom = publishing.publications.mavenJava.pom
 }
 
-System.getenv().forEach(new BiConsumer<String, String>() {
-    @Override
-    void accept(String s, String s2) {
-        System.out.println(s)
+if (System.getenv('JITPACK') == null) {
+    signing {
+        useGpgCmd()
+        sign publishing.publications.mavenJava
     }
-})
-
-signing {
-    useGpgCmd()
-    sign publishing.publications.mavenJava
 }
 
 tasks.removeAll([promoteRepository, closeAndPromoteRepository, getStagingProfile])
