--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.kaleidox</groupId>
   <artifactId>javacord-utilities</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.2rev1</version>
   <name>Javacord Utilities</name>
   <description>Helpful classes and structures for Javacord</description>
   <url>https://github.com/burdoto/javacord-utilities</url>
@@ -29,22 +29,22 @@
   </scm>
   <dependencies>
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.11.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>org.javacord</groupId>
       <artifactId>javacord-api</artifactId>
       <version>3.0.4</version>
-      <scope>compile</scope>
+      <scope>runtime</scope>
       <exclusions>
         <exclusion>
           <artifactId>*</artifactId>
           <groupId>com.fasterxml.jackson.core</groupId>
         </exclusion>
       </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.11.0</version>
-      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.javacord</groupId>
