--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>de.kaleidox</groupId>
+  <groupId>de.comroid</groupId>
   <artifactId>javacord-utilities</artifactId>
-  <version>1.0.2rev1</version>
+  <version>1.1.0-SNAPSHOT</version>
   <name>Javacord Utilities</name>
   <description>Helpful classes and structures for Javacord</description>
   <url>https://github.com/burdoto/javacord-utilities</url>
@@ -31,38 +31,8 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.11.0</version>
+      <version>2.11.2</version>
       <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.javacord</groupId>
-      <artifactId>javacord-api</artifactId>
-      <version>3.0.4</version>
-      <scope>runtime</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>*</artifactId>
-          <groupId>com.fasterxml.jackson.core</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.javacord</groupId>
-      <artifactId>javacord-core</artifactId>
-      <version>3.0.4</version>
-      <scope>runtime</scope>
-      <exclusions>
-        <exclusion>
-          <artifactId>*</artifactId>
-          <groupId>com.fasterxml.jackson.core</groupId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <version>2.9.9</version>
-      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
