--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
-signing.gnupg.keyName=E3BB31A7C7E715BAC6ED83B71B0ECECC0A2BB759
+signing.gnupg.keyName=0A2BB759
 signing.secretKeyRingFile=/var/gpg/javacord-utilities.asc
