--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -62,6 +62,8 @@ task generateGithubPom(type: GenerateMavenPom) {
 }
 
 signing {
+    useGpgCmd()
+
     sign publishing.publications.mavenJava
 }
 
