--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 signing.gnupg.executable=gpg
-signing.gnupg.useLegacyGpg=false
+signing.gnupg.useLegacyGpg=true
 signing.gnupg.keyName=49CC4B86
 signing.secretKeyRingFile=/home/TeamCity/.gnupg/secring.gpg
