--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java-library'
 apply plugin: 'groovy'
 
 group 'de.comroid'
-version '1.1.0-SNAPSHOT'
+version '1.1.0'
 
 apply from: 'gradle/vars.gradle'
 
