--- a/gradle/vars.gradle
+++ b/gradle/vars.gradle
@@ -2,8 +2,8 @@ import static java.lang.System.getenv
 
 ext {
     artifactName = 'javacord-utilities'
-    projectName = 'Javacord Utilities'
-    projectDescription = 'Helpful classes and structures for Javacord'
+    userbase = 'comroid-git'
+    projectDescription = 'Helpful structures for Javacord'
 
     snapshot = project.version.endsWith("-SNAPSHOT")
 
