--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 apply plugin: 'java-library'
 
 group 'de.comroid'
-version '1.2.0'
+version '1.3.0-SNAPSHOT'
 
 apply from: 'gradle/vars.gradle'
 
