--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
 apply plugin: 'java-library'
 
 group 'de.comroid'
-version '1.3.1'
+version '1.3.2-SNAPSHOT'
 
 apply from: 'gradle/vars.gradle'
 
