--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -1,18 +1,15 @@
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
-apply plugin: "io.codearte.nexus-staging"
 
 publishing {
     repositories {
         maven {
-            url = snapshot
-                    ? "https://oss.sonatype.org/content/repositories/snapshots"
-                    : "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-            name = "Sonatype"
+            url = "https://maven.jetbrains.space/comroid/maven"
+            name = "comroid-space-maven"
 
             credentials {
-                username sonatypeUsername
-                password sonatypePassword
+                username spaceUsername
+                password spacePassword
             }
         }
     }
@@ -61,9 +58,7 @@ task generateGithubPom(type: GenerateMavenPom) {
     pom = publishing.publications.mavenJava.pom
 }
 
-task teamcityPublish {
-    dependsOn 'publish'
-
+task teamcityPublish(dependsOn: 'publish') {
     if (!snapshot) {
         dependsOn 'closeAndReleaseRepository'
         tasks.findByName('closeAndReleaseRepository').mustRunAfter 'publish'
@@ -76,11 +71,4 @@ if (!snapshot) {
 
         sign publishing.publications.mavenJava
     }
-}
-
-tasks.removeAll([promoteRepository, closeAndPromoteRepository, getStagingProfile])
-
-nexusStaging {
-    username sonatypeUsername
-    password sonatypePassword
 }
