--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,7 @@ task sourcesJar(type: Jar) {
     }
 }
 
-task javadocJar(type: Jar) {
-    dependsOn 'javadoc'
-    
+task javadocJar(type: Jar, dependsOn: 'javadoc') {
     from javadoc.destinationDir
 
     try {
