--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ task sourcesJar(type: Jar) {
     }
 }
 
-task javadocJar(type: Jar, dependsOn: 'javadoc') {
+task javadocJar(type: Jar) {
+    dependsOn 'javadoc'
+    
     from javadoc.destinationDir
 
     try {
