--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ apply plugin: 'java-library'
 group 'de.comroid'
 version '1.3.3.1-SNAPSHOT'
 
+System.out.println("##teamcity[buildNumber '$version']")
+
 apply from: 'gradle/vars.gradle'
 
 sourceCompatibility = targetCompatibility = 1.8
