--- a/gradle/vars.gradle
+++ b/gradle/vars.gradle
@@ -7,8 +7,8 @@ ext {
 
     snapshot = project.version.endsWith("-SNAPSHOT")
 
-    spaceUsername = getenv("SONATYPE_USERNAME")
-    spacePassword = getenv("SONATYPE_PASSWORD")
+    spaceUsername = getenv("SPACE_USERNAME")
+    spacePassword = getenv("SPACE_PASSWORD")
 }
 
 ext."signing.gnupg.passphrase" = getenv("gpgKeyPassword")
