--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,8 @@ repositories.jcenter()
 
 dependencies {
     api 'org.apache.logging.log4j:log4j-api:2.13.0'
+    
+    implementation 'me.xdrop:fuzzywuzzy:1.2.0'
 
     compileOnly 'org.javacord:javacord-api:3.0.5'
     compileOnly 'org.javacord:javacord-core:3.0.5'
