--- a/gradle/vars.gradle
+++ b/gradle/vars.gradle
@@ -1,21 +1,8 @@
-import static java.lang.System.getenv
-
 ext {
-    artifactName = 'javacord-utilities'
-    userbase = 'comroid-git'
     projectDescription = 'Helpful structures for Javacord'
+    artifactName = project.name.equals('util') ? 'common-util' : project.name
+    userbase = 'comroid-git'
 
     exportedProjects = rootProject.subprojects.collect { it.name }
-
-    snapshot = project.version.endsWith('-SNAPSHOT')
-
-    spaceUsername = getenv('SPACE_USERNAME')
-    spacePassword = getenv('SPACE_PASSWORD')
-
-    sonatypeUsername = getenv('SONATYPE_USERNAME')
-    sonatypePassword = getenv('SONATYPE_PASSWORD')
+    snapshot = project.version.endsWith('SNAPSHOT')
 }
-
-ext.'signing.gnupg.passphrase' = getenv('GPG_PASSPHRASE')
-ext.'signing.gnupg.keyName' = getenv('GPG_KEYNAME')
-ext.'signing.gnupg.useLegacyGpg' = true
