--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply from: 'gradle/vars.gradle'
 
 sourceCompatibility = targetCompatibility = 1.8
 
-tasks.findByName('wrapper').configure {
+tasks.findByName('wrapper')?.configure {
     gradleVersion = '6.0'
     distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"   
 }
