--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <!-- This module was also published with a richer model, Gradle metadata,  -->
+  <!-- which should be used instead. Do not delete the following line which  -->
+  <!-- is to indicate to Gradle or any Gradle module metadata file consumer  -->
+  <!-- that they should prefer consuming it instead. -->
+  <!-- do_not_remove: published-with-gradle-metadata -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.comroid</groupId>
   <artifactId>javacord-utilities</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
-  <name>javacord-utilities</name>
+  <version>1.5.2-SNAPSHOT</version>
+  <name>repo</name>
   <description>Helpful structures for Javacord</description>
-  <url>https://github.com/comroid-git/javacord-utilities</url>
-  <inceptionYear>2019</inceptionYear>
+  <url>https://github.com/comroid-git/repo</url>
+  <inceptionYear>2020</inceptionYear>
   <licenses>
     <license>
       <name>The Apache License, Version 2.0</name>
@@ -17,21 +22,21 @@
   </licenses>
   <developers>
     <developer>
-      <id>burdoto</id>
+      <id>kaleidox</id>
       <name>Tobias Burdow</name>
-      <email>burdoto@outlook.com</email>
+      <email>contact@comroid.org</email>
     </developer>
   </developers>
   <scm>
-    <connection>scm:git:git://github.com/comroid-git/javacord-utilities.git</connection>
-    <developerConnection>scm:git:ssh://github.com/comroid-git/javacord-utilities.git</developerConnection>
-    <url>https://github.com/comroid-git/javacord-utilities</url>
+    <connection>scm:git:git://github.com/comroid-git/repo.git</connection>
+    <developerConnection>scm:git:ssh://github.com/comroid-git/repo.git</developerConnection>
+    <url>https://github.com/comroid-git/repo</url>
   </scm>
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.11.2</version>
+      <version>2.13.0</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
